--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  border-collapse: collapse;
 }
 
 .pragati-narrow-regular {
@@ -88,4 +89,11 @@ nav {
 
 .title {
   padding: 28px;
+  height: 250px;
+}
+
+.halfBlock {
+  width: 50%;
+  height: 600px;
+  border-right: 1px var(--main-gray) solid;
 }
