--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 * {
   margin: 0px;
   padding: 0px;
+}
+
+nav {
+  z-index: 99;
+}
+
+div {
   box-sizing: border-box;
-  border-collapse: collapse;
 }
 
 .pragati-narrow-regular {
@@ -36,26 +42,13 @@ h2 {
   --main-white: #ffffff;
 }
 
-.bottomBorder {
+/* .bottomBorder {
   border-bottom: 1px var(--main-gray) solid;
 }
 
 .topBorder {
   border-top: 1px var(--main-gray) solid;
-}
-
-/* master css */
-
-.layout {
-  padding: 20px;
-}
-
-.mainBody {
-  width: 100%;
-  height: 3000px;
-  border-left: 1px var(--main-gray) solid;
-  border-right: 1px var(--main-gray) solid;
-}
+} */
 
 nav {
   border-bottom: 1px var(--main-gray) solid;
@@ -80,20 +73,75 @@ nav {
   object-fit: cover;
 }
 
-/* 네비게이션, 바디 관련 */
+.line {
+  border: 1px var(--main-gray) solid;
+}
+
+/* 네비게이션 끝 */
+
+.layout {
+  padding: 20px;
+}
+
+.mainBody {
+  width: 100%;
+  height: 4000px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .fullImg {
-  background-color: aqua;
+  width: 100%;
   height: 100vh;
+  background-color: aqua;
 }
 
 .title {
-  padding: 28px;
+  width: 100%;
   height: 250px;
+  padding: 28px;
 }
 
 .halfBlock {
   width: 50%;
   height: 600px;
-  border-right: 1px var(--main-gray) solid;
+  padding: 10px;
+}
+
+.bagProfile {
+  border-radius: 20px;
+  background-color: blueviolet;
+  width: 100%;
+  height: 100%;
+}
+
+.fullBlock {
+  width: 100vw;
+  height: 200px;
+  z-index: 10;
+  position: relative;
+}
+
+@keyframes textLoop {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-200%);
+  }
+}
+
+.Looping {
+  position: absolute;
+  bottom: -105px;
+  font-family: Pragati Narrow;
+  font-weight: 400;
+  width: 100%;
+  font-size: 240px;
+  white-space: nowrap;
+  transform: translate(-5%);
+  animation: textLoop 5s infinite;
 }
